Small fix for footer text

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -47,7 +47,7 @@ html
     footer.layout-footer
       .layout-footer_inner
         .footer
-          | Step in my trip...
+          | &copy; Coffee Dolphins, 2014
 
     .modals_bg data-role='modals-bg'
     .modals_layer data-role='modals-layer'
