--- a/app/assets/stylesheets/blocks/tags.sass
+++ b/app/assets/stylesheets/blocks/tags.sass
@@ -37,6 +37,16 @@
     border-bottom: 12px solid transparent
     border-right: 7px solid #aaa
 
+.tags-item input[type='text']
+  color: $text_color
+  display: inline-block !important
+  margin-left: 5px !important
+  padding: 0 5px !important
+  height: 18px !important
+  width: 55px !important
+  font-size: 12px !important
+  border-color: #aaa
+
 .tags-item_delete
   display: inline-block
   font-size: 10px
