--- a/app/views/positions/_edit_search_keywords.html.slim
+++ b/app/views/positions/_edit_search_keywords.html.slim
@@ -1,7 +1,11 @@
 = neo_form_for position do |f|
   .flexible
     .flexible-left
-      = f.association :search_keywords, as: :keywords, modifier: 'stand_alone', label: false
+      = f.association :search_keywords,
+        as: :keywords,
+        template: 'keyword_with_search_count',
+        modifier: 'stand_alone',
+        label: false
     .flexible-right
       button.small_button.is-icon.is-green type='submit'
         = fa_icon 'save'
