--- a/app/views/positions/edit.html.slim
+++ b/app/views/positions/edit.html.slim
@@ -7,7 +7,10 @@
       = f.input :profit, as: :string, label: 'Прибыль', hint: 'в рублях, дробная часть отделяется точкой'
       = f.input :availability_level, as: :string, label: 'Доступность', hint: 'от 0 до 5'
       = f.input :image_url, as: :string, label: 'Картинка'
-      = f.association :search_keywords, as: :keywords, label: 'Ключевые слова'
+      = f.association :search_keywords,
+        as: :keywords,
+        template: 'keyword_with_search_count',
+        label: 'Ключевые слова'
 
     .form-actions
       .fl_r
