--- a/app/views/positions/_search_keywords.html.slim
+++ b/app/views/positions/_search_keywords.html.slim
@@ -1,4 +1,6 @@
 .tags
   - position.search_keywords.each do |search_keyword|
     .tags-item
-      | #{search_keyword.name} — #{search_keyword.search_count}
+      = search_keyword.name
+      span.tags-item_counter
+        = search_keyword.search_count
