--- a/app/assets/stylesheets/blocks/tags.sass
+++ b/app/assets/stylesheets/blocks/tags.sass
@@ -48,13 +48,10 @@
   border-color: #aaa
 
 .tags-item_counter
-  float: right
   margin-left: 8px
-  margin-right: -8px
   border-left: 1px solid #999
-  padding: 0 8px 0 7px
+  padding-left: 7px
   height: 24px
-  background: #aaa
   text-align: center
   box-shadow: 1px 0 #bbb inset
 
