--- a/app/views/positions/_position.html.slim
+++ b/app/views/positions/_position.html.slim
@@ -10,7 +10,7 @@
     .panel_list.is-table
       .panel_list-inner
         .panel_list-photo
-          /img src=position.image_url title=position.title
+          img src=position.image_url title=position.title
         .panel_list-items
           = list_item 'Категория', position.category
           = list_item 'Цена', position.price
