Add ability to like positions

--- a/app/assets/javascripts/bundles/app/templates/flash_message.jst.ejs
+++ b/app/assets/javascripts/bundles/app/templates/flash_message.jst.ejs
@@ -2,7 +2,7 @@
   <div class="flash_message-inner">
     <%- message %>
     <span class="flash_message-close fl_r" data-role="flash_message-close">
-      Закрыть
+      <i class="fa fa-close"></i>
     </span>
   </div>
 </div>
