--- a/app/views/positions/_position.html.slim
+++ b/app/views/positions/_position.html.slim
@@ -3,6 +3,7 @@
     span data-role='item-title'
       = position.title
     .fl_r
+      = position.like_button
       = position.edit_button
       = position.remove_button
 
