--- a/app/views/shared/_flash_message.html.slim
+++ b/app/views/shared/_flash_message.html.slim
@@ -4,5 +4,5 @@
   .flash_message-inner
     = message
     span.flash_message-close.fl_r data-role='flash_message-close'
-      | Закрыть
+      = fa_icon('close')
 
