--- a/app/assets/stylesheets/buttons/small_button.sass
+++ b/app/assets/stylesheets/buttons/small_button.sass
@@ -104,3 +104,28 @@
         border: 1px solid $red_dark !important
         background: $red_dark !important
 
+.small_button.is-like
+  border: 1px solid lighten($red_dark, 17%)
+  color: lighten($red_dark, 17%)
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, .2)
+
+  &:hover
+    background: lighten($red_dark, 17%)
+    color: #fff
+
+  &.is-disabled,
+  &.is-disabled:hover,
+  &:disabled,
+  &:disabled:hover
+    border: 1px solid lighten($red_dark, 17%) !important
+    background: lighten($red_dark, 17%) !important
+
+  .fa-heart
+    display: none
+
+  &.is-liked
+    .fa-heart
+      display: inline-block
+
+    .fa-heart-o
+      display: none
