Basic markup and design for notes

--- a/app/assets/stylesheets/imports.sass
+++ b/app/assets/stylesheets/imports.sass
@@ -6,6 +6,7 @@ $green_dark: #308434
 $red_dark: #D20A2F
 
 $text_color: #555
+$text_color_medium: lighten($text_color, 15%)
 $text_color_light: lighten($text_color, 25%)
 
 $header_font_size: 14px
