--- a/app/assets/stylesheets/blocks/panel.sass
+++ b/app/assets/stylesheets/blocks/panel.sass
@@ -36,6 +36,12 @@
   +acts_as_panel_body
   border-radius: 0 0 5px 5px
 
+  &.for-notes
+    padding: 15px
+
+  &.is-dark
+    background: $blue_light
+
 p.panel-text
   margin: 25px 0 0 0
 
