--- a/app/views/positions/_position.html.slim
+++ b/app/views/positions/_position.html.slim
@@ -29,7 +29,7 @@
     .panel
       .panel-header
         | Заметки
-      .panel-body.for-notes.is-dark
+      .panel-body.has-p15.is-dark
         - 5.times do
         .note
           .note-header
