Links in panel headers

--- a/app/assets/stylesheets/blocks/menu.sass
+++ b/app/assets/stylesheets/blocks/menu.sass
@@ -20,7 +20,7 @@
   padding: 10px 15px
   height: 25px
   line-height: 25px
-  color: #2B587A
+  color: $blue_dark
   border-radius: 5px
   text-decoration: none
 
@@ -34,5 +34,5 @@
     text-shadow: 0 1px rgba(0, 0, 0, .22)
 
   &.is-active
-    background: $blue_dark
+    background: $blue_bg
     color: #fff
