--- a/app/assets/stylesheets/blocks/panel.sass
+++ b/app/assets/stylesheets/blocks/panel.sass
@@ -32,6 +32,9 @@
   +acts_as_panel_header
   border-radius: 5px 5px 0 0
 
+.panel-header_link
+  +acts_as_panel_header_link
+
 .panel-body
   +acts_as_panel_body
   border-radius: 0 0 5px 5px
