--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -25,7 +25,7 @@ a
 /* Header */
 .layout-header
   height: 65px
-  background: $blue_dark
+  background: $blue_bg
   border-radius: 0 0 5px 5px
 
 /* Main Wrapper */
@@ -59,6 +59,6 @@ a
   width: 1020px
   height: 65px
   margin: 0 auto
-  background: $blue_dark
+  background: $blue_bg
   color: #fff
   border-radius: 5px 5px 0 0
