--- a/app/assets/stylesheets/blocks/panel_item.sass
+++ b/app/assets/stylesheets/blocks/panel_item.sass
@@ -17,6 +17,9 @@
 .panel_item-header
   +acts_as_panel_header
 
+.panel_item-header_link
+  +acts_as_panel_header_link
+
 .panel_item-body
   +acts_as_panel_body
 
