--- a/app/assets/stylesheets/primitives/panel.sass
+++ b/app/assets/stylesheets/primitives/panel.sass
@@ -12,8 +12,17 @@
   white-space: nowrap
   text-shadow: 0 1px rgba(255, 255, 255, .75)
 
+  a
+    text-decoration: none
+
   .fl_r
     margin-left: -100%
+
+=acts_as_panel_header_link
+  position: relative
+  padding-bottom: 3px
+  border-bottom: 1px solid rgba($blue_dark, .5)
+  text-decoration: none
 
 =acts_as_panel_body
   margin-top: -1px
