--- a/app/views/positions/_position.html.slim
+++ b/app/views/positions/_position.html.slim
@@ -1,6 +1,6 @@
 .panel_item data-view='item' data={item_id: position.id, edit_path: position_path(position), block_path: cut_position_path(position)}
   .panel_item-header
-    span data-role='item-title'
+    span data-role='editable_item-title'
       = link_to position.title, position_path(position), class: 'panel_item-header_link'
       span.chevron.is-right
     .fl_r
@@ -8,7 +8,7 @@
       = position.edit_button
       = position.remove_button
 
-  .panel_item-body data-role='item-info'
+  .panel_item-body data-role='editable_item-info'
     .panel_list.is-table
       .panel_list-inner
         .panel_list-photo
