Small fix to cancel user editing

--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -9,7 +9,7 @@
 
     .form-actions
       .fl_r
-        .small_button data-role='item-cancel_edit'
+        .small_button data-role='editable_item-cancel_edit'
           | Отмена
         button.small_button.is-green type='submit'
           | Сохранить
