--- a/app/views/positions/index.html.slim
+++ b/app/views/positions/index.html.slim
@@ -1,6 +1,6 @@
 div data-component='app#items_list'
   .page-title
-    | Популярные позиции
+    | Позиции
     .fl_r
       .small_button data-modal=prepare_import_positions_path
         | Импортировать
