Controller for notes

--- a/app/views/positions/show.html.slim
+++ b/app/views/positions/show.html.slim
@@ -28,25 +28,5 @@
                 = list_item 'Ключевые слова' do
                   = render 'edit_search_keywords', position: @position
 
-    .panel
-      .panel-header
-        | Заметки
-      .panel-body.has-p15.is-dark
-        - 5.times do
-        .note
-          .note-header
-            | О безопасности в интернете
-            span.note-date
-              | , добавила Рита 27.11.2014
-            .fl_r
-              .note-button
-                = fa_icon('pencil')
-              .note-button
-                = fa_icon('close')
-          .note-body
-            .note-text
-              p
-                | Как я в комментарии к той статье написал, это очень большая глупость. Вы вслепую запускаете код из интернета, который вы даже не видели, и тут даже совершенно неважно из под sudo или нет.
-              p
-                | Еще раз. Абсолютно вся безопасность построена на вашем доверии к определенным людям или компаниям, будь это Линус Торвальдс, Ubuntu Security Team либо автор маленькой полезной утилиты. Вам необходимо убедиться в том, что 1. автор заслуживает доверия, и 2. вы запускаете то, что выложил автор.
+    = render 'polymorphic/notes/notes', notable: @position
 
