--- a/app/assets/stylesheets/blocks/note.sass
+++ b/app/assets/stylesheets/blocks/note.sass
@@ -1,9 +1,17 @@
 @import 'imports'
 
 .note
-  border: 1px solid $blue_medium
-  background: #fff
+  border: 1px solid #EEDBC9
+  background: #FCF6E9
   border-radius: 5px
+
+  &.is-new
+    margin-bottom: 15px
+    border: 1px dashed #EEDBC9
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, .15)
+
+    .note-body
+      margin: 0
 
 .note-header
   padding: 9px 7px 9px 15px
@@ -25,9 +33,27 @@
 
 .note-button
   display: inline-block
-  color: $blue_dark
-  height: 25px
-  width: 20px
-  text-align: center
-  line-height: 25px
-  font-size: $text_font_size
+  margin-left: 7px
+  color: $green_dark
+  border: 1px solid $green_dark
+  border-radius: 3px
+  padding: 0 9px
+  line-height: 23px
+  background: #FCF6E9
+  cursor: pointer
+
+  &:first-child
+    margin-left: 0
+
+  &.is-cancel
+    border: 1px solid darken(#EEDBC9, 10%)
+    color: darken(#EEDBC9, 15%)
+
+// .note-button
+//   display: inline-block
+//   color: $blue_dark
+//   height: 25px
+//   width: 20px
+//   text-align: center
+//   line-height: 25px
+//   font-size: $text_font_size
