--- a/app/assets/stylesheets/blocks/note.sass
+++ b/app/assets/stylesheets/blocks/note.sass
@@ -1,5 +1,11 @@
 @import 'imports'
 
+.notes .note
+  margin-top: 15px
+
+  &:first-child
+    margin-top: 0
+
 .note
   border: 1px solid #EEDBC9
   background: #FCF6E9
@@ -14,46 +20,36 @@
       margin: 0
 
 .note-header
-  padding: 9px 7px 9px 15px
+  padding: 12px 7px 12px 15px
   font-weight: bold
+  font-size: 12px
+  line-height: 18px
 
 .note-body
   margin: 0 15px 9px
 
 .note-date
   font-size: 11px
-  font-weight: bold
   color: $text_color_medium
 
 .note-text p
-  margin: 15px 0 0 0
+  margin: 12px 0 0 0
+  font-size: 12px
+  line-height: 18px
+  font-style: italic
 
   &:first-child
     margin-top: 0
 
 .note-button
   display: inline-block
-  margin-left: 7px
-  color: $green_dark
-  border: 1px solid $green_dark
-  border-radius: 3px
-  padding: 0 9px
-  line-height: 23px
-  background: #FCF6E9
+  color: darken(#EEDBC9, 10%)
+  height: 18px
+  width: 20px
+  text-align: center
+  line-height: 18px
+  font-size: $text_font_size
   cursor: pointer
 
-  &:first-child
-    margin-left: 0
-
-  &.is-cancel
-    border: 1px solid darken(#EEDBC9, 10%)
-    color: darken(#EEDBC9, 15%)
-
-// .note-button
-//   display: inline-block
-//   color: $blue_dark
-//   height: 25px
-//   width: 20px
-//   text-align: center
-//   line-height: 25px
-//   font-size: $text_font_size
+  &:hover
+    color: darken(#EEDBC9, 20%)
