--- a/app/assets/stylesheets/blocks/note.sass
+++ b/app/assets/stylesheets/blocks/note.sass
@@ -16,9 +16,6 @@
     border: 1px dashed #EEDBC9
     box-shadow: 1px 1px 2px rgba(0, 0, 0, .15)
 
-    .note-body
-      margin: 0
-
 .note-header
   padding: 12px 7px 12px 15px
   font-weight: bold
@@ -26,14 +23,14 @@
   line-height: 18px
 
 .note-body
-  margin: 0 15px 9px
+  margin: 0
 
 .note-date
   font-size: 11px
   color: $text_color_medium
 
 .note-text p
-  margin: 12px 0 0 0
+  margin: 12px 15px
   font-size: 12px
   line-height: 18px
   font-style: italic
