--- a/app/views/polymorphic/notes/_note.html.slim
+++ b/app/views/polymorphic/notes/_note.html.slim
@@ -3,7 +3,7 @@
     .note-header
       = note.title
       span.note-date
-        | , добавил #{note.user.full_name} #{l(note.created_at)}
+        ' , #{note.user.male? ? 'добавил' : 'добавила'} #{note.user.full_name} #{l(note.created_at)}
       .fl_r
         =note.edit_button
         =note.remove_button
