Make all textareas autoresizable

--- a/app/assets/stylesheets/form/textarea.sass
+++ b/app/assets/stylesheets/form/textarea.sass
@@ -3,6 +3,8 @@
 .textarea
   textarea
     +field_input
+    font-size: 12px
+    line-height: 20px
     min-height: 100px
-    padding: 9px
+    padding: 5px 9px
     resize: vertical
