Implement landings admin pages

--- a/app/assets/stylesheets/blocks/chevron.sass
+++ b/app/assets/stylesheets/blocks/chevron.sass
@@ -3,5 +3,6 @@
 .chevron
   &.is-right
     display: inline-block
-    margin: 0 7px
+    padding: 0 7px
     +hidpi-inline('icons/chevron-right-blue.png')
+    background-position: 7px 0
