--- a/app/assets/stylesheets/blocks/modals/modal.sass
+++ b/app/assets/stylesheets/blocks/modals/modal.sass
@@ -16,7 +16,7 @@
   border-radius: 0 0 5px 5px
 
 .modal-fields
-  padding: 15px
+  margin: 15px
 
 .modal-buttons
   border-top: 1px solid $blue_medium
