--- a/app/assets/stylesheets/blocks/panel.sass
+++ b/app/assets/stylesheets/blocks/panel.sass
@@ -51,3 +51,8 @@ p.panel-text
   &:first-child
     margin-top: 0
 
+.panel-footer
+  +acts_as_panel_body
+  padding: 15px
+  background: $blue_light
+  border-radius: 0 0 5px 5px
