--- a/app/views/positions/_position.html.slim
+++ b/app/views/positions/_position.html.slim
@@ -1,9 +1,16 @@
 .panel_item data-view='item' data={item_id: position.id, edit_path: position_path(position), block_path: cut_position_path(position)}
   .panel_item-header
     span data-role='editable_item-title'
-      = link_to position.title, position_path(position)
-      span.chevron.is-right
+      = link_to position_path(position) do
+        = position.title
+        span.chevron.is-right
     .fl_r
+      - if position.landing.nil?
+        .small_button.is-green.is-icon data-modal=new_landing_path(position_id: position.id)
+          = fa_icon('plus')
+      - else
+        = link_to 'Открыть лендинг &rarr;'.html_safe, landing_path(position.landing), class: 'small_button is-green'
+
       = position.like_button
       = position.edit_button
       = position.remove_button
