--- a/app/views/admin/polymorphic/notes/_notes.html.slim
+++ b/app/views/admin/polymorphic/notes/_notes.html.slim
@@ -20,7 +20,7 @@
                 | Добавить заметку
 
     .notes data-role='items_list-list_wrapper'
-      = render partial: 'polymorphic/notes/note', collection: notable.notes, as: :note
+      = render partial: 'admin/polymorphic/notes/note', collection: notable.notes, as: :note
 
     p.page-text class=('hidden' if notable.notes.any?) data-role='items_list-empty_list_message'
       | Нет заметок.
