--- a/app/views/admin/landings/edit.html.slim
+++ b/app/views/admin/landings/edit.html.slim
@@ -4,6 +4,8 @@
   = link_to 'Лендинги', landings_path, class: 'panel_item-header_link'
   span.chevron.is-right
   = @landing.title
+  .fl_r
+    = link_to 'Показать черновик &rarr;'.html_safe, @landing.public_path, class: 'small_button is-green', target: '_blank'
 
 .page-body
   = neo_form_for @landing do |f|
