Add landing markup and images

--- a/app/assets/stylesheets/public/blocks/price_tag.sass
+++ b/app/assets/stylesheets/public/blocks/price_tag.sass
@@ -6,7 +6,7 @@
   right: -127px
   width: 200px
   height: 75px
-  background: image_url('price_tag.png') no-repeat
+  background: image_url('public/price_tag.png') no-repeat
   background-size: 200px
   transform: rotate(75deg)
   z-index: 1
