Move admin images to separate dir

--- a/app/assets/stylesheets/admin/layout.sass
+++ b/app/assets/stylesheets/admin/layout.sass
@@ -7,7 +7,7 @@ html, body
 body
   font-size: $text_font_size
   line-height: 25px
-  background: image-url('cream_pixels_bg.png') center center repeat
+  background: image-url('admin/cream_pixels_bg.png') center center repeat
   background-size: 160px
   overflow-x: hidden
 
