--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -18,7 +18,7 @@ html
     .layout-main
       header.layout-header
         .header
-          img.header-logo src=image_path('logo.png')
+          img.header-logo src=image_path('admin/logo.png')
           | Coffee Dolphins
           - if current_user
             .fl_r
