--- a/app/views/public/landings/_main_section.html.slim
+++ b/app/views/public/landings/_main_section.html.slim
@@ -4,7 +4,7 @@
       .cta
         .cta_inner
           .cta-title
-            = @landing.title
+            = @landing.title.html_safe
 
           .cta-description
             | — Легкий, практичный, занимает мало места, идеально подойдет для полива газонов, мойки машины, и многого другого.
