Some improvements to landings interface

--- a/app/assets/stylesheets/admin/blocks/panel.sass
+++ b/app/assets/stylesheets/admin/blocks/panel.sass
@@ -54,5 +54,6 @@ p.panel-text
 .panel-footer
   +acts_as_panel_body
   padding: 15px
-  background: $blue_light
+  background: #E9EBEC
+  border-color: #D2CCCC
   border-radius: 0 0 5px 5px
