Allow to edit position from position page

--- a/app/views/admin/categories/_category.html.slim
+++ b/app/views/admin/categories/_category.html.slim
@@ -1,4 +1,4 @@
-.panel_item data-view='item' data={item_id: category.id, edit_path: category_path(category), block_path: category_path(category)}
+.panel_item data-view='item' data={item_id: category.id, block_path: category_path(category)}
   .panel_item-header
     span data-role='editable_item-title'
       = category.title
