--- a/app/views/admin/polymorphic/notes/_note.html.slim
+++ b/app/views/admin/polymorphic/notes/_note.html.slim
@@ -1,4 +1,4 @@
-.note data-view='item' data={item_id: note.id, edit_path: note_path(note), block_path: note_path(note)}
+.note data-view='item' data={item_id: note.id, block_path: note_path(note)}
   div data-role='editable_item-info'
     .note-header
       = note.title
