--- a/app/views/admin/users/_user.html.slim
+++ b/app/views/admin/users/_user.html.slim
@@ -1,4 +1,4 @@
-.panel_item data-view='item' data={item_id: user.id, edit_path: user_path(user), block_path: user_path(user)}
+.panel_item data-view='item' data={item_id: user.id, block_path: user_path(user)}
   .panel_item-header
     span data-role='editable_item-title'
       = user.full_name
