--- a/app/views/admin/positions/_position.html.slim
+++ b/app/views/admin/positions/_position.html.slim
@@ -1,4 +1,4 @@
-.panel_item data-view='item' data={item_id: position.id, edit_path: position_path(position), block_path: cut_position_path(position)}
+.panel_item data-view='item' data={item_id: position.id, block_path: cut_position_path(position)}
   .panel_item-header
     span data-role='editable_item-title'
       = link_to position_path(position) do
