--- a/app/views/admin/categories/index.html.slim
+++ b/app/views/admin/categories/index.html.slim
@@ -1,6 +1,7 @@
 div data-component='app#items_list'
   .page-title
-    | Категории лендингов
+    span
+      | Категории лендингов
     .fl_r
       button.small_button.is-green data-role='items_list-show_form'
         | Добавить новую
