--- a/app/views/admin/landings/index.html.slim
+++ b/app/views/admin/landings/index.html.slim
@@ -1,6 +1,7 @@
 div data-component='app#items_list'
   .page-title
-    | Лендинги
+    span
+      | Лендинги
 
   .page-body
     .panels data-role='items_list-list_wrapper'
