--- a/app/views/admin/polymorphic/notes/_notes.html.slim
+++ b/app/views/admin/polymorphic/notes/_notes.html.slim
@@ -1,6 +1,7 @@
 .panel data-component='app#items_list'
   .panel-header
-    | Заметки
+    span
+      | Заметки
     .fl_r
       button.small_button.is-green data-role='items_list-show_form'
         | Добавить новую
