--- a/app/views/admin/positions/index.html.slim
+++ b/app/views/admin/positions/index.html.slim
@@ -1,6 +1,7 @@
 div data-component='app#items_list'
   .page-title
-    | Позиции
+    span
+      | Позиции
     .fl_r
       .small_button data-modal=prepare_import_positions_path
         | Импортировать
