--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -1,6 +1,7 @@
 div data-component='app#items_list'
   .page-title
-    | Пользователи
+    span
+      | Пользователи
     .fl_r
       button.small_button.is-green data-role='items_list-show_form'
         | Добавить нового
