--- a/app/assets/stylesheets/admin/blocks/panel.sass
+++ b/app/assets/stylesheets/admin/blocks/panel.sass
@@ -1,5 +1,6 @@
 @import 'admin/imports'
 @import 'admin/primitives/panel'
+@import 'admin/primitives/flexible'
 
 .panel
 
@@ -30,7 +31,15 @@
 
 .panel-header
   +acts_as_panel_header
+  +acts_as_flexible_container
   border-radius: 5px 5px 0 0
+
+  > span
+    +text_overflow
+    +acts_as_flexible_left
+
+  .fl_r
+    +acts_as_flexible_right
 
 .panel-header_link
   +acts_as_panel_header_link
