--- a/app/views/admin/landings/_landing.html.slim
+++ b/app/views/admin/landings/_landing.html.slim
@@ -1,8 +1,9 @@
 .panel_item data-view='item' data={item_id: landing.id}
   .panel_item-header
-    = link_to position_path(landing.position) do
-      = landing.position.title
-      span.chevron.is-right
+    span
+      = link_to position_path(landing.position) do
+        = landing.position.title
+        span.chevron.is-right
     .fl_r
       = landing.remove_button
 
