--- a/app/views/admin/positions/_landing_details.html.slim
+++ b/app/views/admin/positions/_landing_details.html.slim
@@ -1,7 +1,8 @@
 .panel
   .panel_item
     .panel_item-header
-      | Лендинг
+      span
+        | Лендинг
       .fl_r
         = link_to fa_icon('pencil'), edit_landing_path(landing), class: 'small_button is-icon'
         = link_to 'Показать черновик &rarr;'.html_safe, landing.public_path, class: 'small_button', target: '_blank'
