--- a/app/views/admin/landings/edit.html.slim
+++ b/app/views/admin/landings/edit.html.slim
@@ -15,6 +15,13 @@
       .form
         .panel_item
           .panel_item-header
+            | Основные параметры
+          .panel_item-body
+            .form-fields
+              = f.input :title, label: 'Заголовок'
+
+        .panel_item
+          .panel_item-header
             | Главная информация
           .panel_item-body
             .form-fields
