Setup html editing

--- a/app/assets/stylesheets/admin/application.css.sass
+++ b/app/assets/stylesheets/admin/application.css.sass
@@ -1,4 +1,7 @@
 //= require normalize-css/normalize
+
+//= require codemirror/lib/codemirror
+
 //= require font-awesome
 //= require ./global
 //= require ./layout
