--- a/app/assets/stylesheets/admin/form/textarea.sass
+++ b/app/assets/stylesheets/admin/form/textarea.sass
@@ -8,3 +8,13 @@
     min-height: 100px
     padding: 5px 9px
     resize: vertical
+
+  .CodeMirror
+    height: auto
+    font-size: 11px
+    line-height: 18px
+    font-family: Monaco
+
+  .CodeMirror-wrap
+    border-radius: 3px
+    border: 1px solid $form_border_color
